--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="main">
   <app-root></app-root>
 </body>
 </html>
