added preview and updated order of presented items

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
 
   <meta property="og:title" content="Vasilis Gadala Personal Website" />
   <meta property="og:description" content="Check out my personal website!" />
-  <meta property="og:image" content="https://github.com/VasilisGadala/Portfolio/tree/main/src/assets/webpage.png" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/VasilisGadala/Portfolio/main/src/assets/webpage.png" />
   <meta property="og:url" content="https://vasilisgadala.com"/>
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Vasilis Gadala Personal Website" />
   <meta name="twitter:description" content="Check out my personal website!" />
-  <meta name="twitter:image" content="https://github.com/VasilisGadala/Portfolio/tree/main/src/assets/webpage.png" />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/VasilisGadala/Portfolio/main/src/assets/webpage.png" />
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.2, minimum-scale=0.7, user-scalable=no">
